[package]
name = "orgflow-tui"
version = "0.2.0"
edition = "2024"
description = "A terminal user interface for orgflow - manage notes and tasks with a smooth workflow"
license = "MIT"
repository = "https://github.com/ucyo/orgflow"
homepage = "https://github.com/ucyo/orgflow"
documentation = "https://docs.rs/orgflow-tui"
keywords = ["tui", "terminal", "productivity", "notes", "organization"]
categories = ["command-line-utilities", "text-processing"]
readme = "../README.md"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
orgflow = { version = "0.2.0", path = "../orgflow" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "orgflow"
path = "src/main.rs"
